# rust_jwk_example

./: Cargo.toml  README.md  api.graphql
src/: lib.rs  main.rs
src/config/auth/: mod.rs  request_guard.rs
src/config/auth/jwk/: configuration.rs  fetch_keys.rs  get_max_age.rs  jwk_auth.rs  mod.rs  verifier.rs
src/domain/: user.rs
tests/: fetch_keys.rs
